<resources>
    <string name="app_name">youDiseNextLevel</string>
    <string name="app_slogan">Your Desire, Find it here.</string>
    <string name="app_login">Se Connecter</string>
    <string name="app_login_admin">Connexion Admin</string>
    <string name="login">Connexion</string>
    <string name="register">Créer un compte</string>
    <string name="app_register">Inscription</string>
    <string name="input_username">Nom d\'Utilisateur</string>
    <string name="input_fullname">Nom Complet</string>
    <string name="input_email">Adresse Email</string>
    <string name="input_phone">Numéro de Tél.</string>
    <string name="input_password">Mot De Passe</string>
    <string name="input_country">Pays de Résidence</string>
    <string name="input_Newusername">Nouveau nom d\'utilisateur</string>
    <string name="input_Newemail">Nouvel Email</string>
    <string name="input_Newphone">Nouveau numéro de Tél.</string>
    <string name="input_Newpassword">Nouveau mot de passe</string>
    <string name="input_Newcountry">Nouveau pays de Résidence</string>
    <string name="remember_me_checkbox">Se souvenir de moi</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="i_admin">Je suis un Admin ?</string>
    <string name="not_admin">Je suis pas un Admin ?</string>
    <string name="you_not_admin">Vous n\'êtes pas Admin ! Connectez-vous en tant que Utilisateur svp.</string>
    <string name="you_not_user">Vous n\'êtes pas Utilisateur ! Connectez-vous en tant que Admin svp.</string>
    <string name="registrationAdmin_msg">Félicitaions , votre compte Admin a été créé avec succés !</string>
    <string name="registrationUser_msg">Félicitaions , votre compte User a été créé avec succés !</string>
    <string name="empty_name">Entrez votre nom svp.</string>
    <string name="empty_email">Entrez votre adresse Email svp.</string>
    <string name="empty_phone">Entrez votre numéro de télephone svp.</string>
    <string name="empty_password">Entrez votre mot de passe svp.</string>
    <string name="empty_country">Entrez votre pays svp.</string>
    <string name="empty_adress">Entrez votre adresse svp.</string>
    <string name="empty_bank">Entrez votre numero de votre carte de crédit svp.</string>
    <string name="mandatory_image_uri">Une image de votre produit est obligatoire.</string>
    <string name="empty_name_product">Entrez le nom du Produit svp.</string>
    <string name="empty_description_product">Ecrivez une description du Produit svp.</string>
    <string name="empty_price_product">Entrez le prix du Produit svp.</string>
    <string name="not_enough_password">Le mot de passe doit comprendre minimum 6 caractères.</string>
    <string name="not_enough_phone">Entrez un numero de Tel. valide.</string>
    <string name="invalid_bank_card">Votre carte de crédit est invalide.</string>
    <string name="invalid_phone">Entrez un numéro de Tél. valide svp.</string>
    <string name="invalid_mail">Entrez une Adresse Email valide svp.</string>
    <string name="creation_account">Creation du Compte</string>
    <string name="hold_on_msg">Veuillez patientez un petit instant...</string>
    <string name="login_account">En cours de connexion</string>
    <string name="already_logged_in">Déjà Connecté...</string>
    <string name="logged_Admin_msg">Bienvenue cher Admin, vous vous êtes connecté avec succés !</string>
    <string name="logged_User_msg">Bienvenue cher Utilisateur, vous vous êtes connecté avec succés !</string>
    <string name="already_logged_msg">Vous êtes déjà connecté !</string>
    <string name="logout_User_msg">Vous vous êtes déconnecté !</string>
    <string name="already_registered_msg">Ce compte existe déja !</string>
    <string name="error_register_msg">Une erreur est survenue lors de l\'inscription !</string>
    <string name="wrong_logged_msg">Email ou mot de passe incorrect !</string>
    <string name="add_new_product">Ajouter Produit</string>
    <string name="product_name">Nom du Produit</string>
    <string name="product_category">Categorie du Produit</string>
    <string name="product_describe">Description du Produit</string>
    <string name="product_price">Prix du Produit</string>
    <string name="product_datetime">Date du Produit</string>
    <string name="product_added">Produit ajouté avec succés !</string>
    <string name="user_updated">Mise a jour réussi !</string>
    <string name="error_addproduct">Erreur produit lors de l\'insertion !</string>
    <string name="cart_name">Panier</string>
    <string name="category_name">Categories</string>
    <string name="quantity_cart">Quantité</string>
    <string name="total_price_cart">Prix Total</string>
    <string name="refresh_cart">Vider le panier</string>
    <string name="orders_name">Commandes</string>
    <string name="setting_name">Paramètres</string>
    <string name="logout_name">Déconnexion</string>
    <string name="back_bt_name">Retour</string>
    <string name="addcart_bt_name">Ajouter au panier</string>
    <string name="cancel_setting">Annuler</string>
    <string name="save_setting">Enregistrer</string>
    <string name="title_setting">Modifier le profil</string>
    <string name="time_update_account">Votre compte se remet à jour</string>
    <string name="added_to_cart">Produit ajouté au Panier !</string>
    <string name="already_exist_in_cart">Votre Produit se trouve deja dans votre Panier !</string>
    <string name="deletion_product">Suppression du Produit : </string>
    <string name="sure_to_delete">Etes-vous sûr de supprimer !</string>
    <string name="product_deleted">Produit supprimé de votre panier !</string>
    <string name="refresh_activity">Veuillez rafraichir la page !</string>
    <string name="empty_basket">Panier Vidé !</string>
    <string name="already_empty_cart">Votre Panier est déjà vide !</string>
    <string name="impossible_to_checkout">Impossible de passer une commande car votre panier est vide !</string>
    <string name="order_tilte">La Commande</string>
    <string name="adress">Adresse</string>
    <string name="card_bank">Carte de Crédit</string>
    <string name="to_order">Commander</string>
    <string name="come_back">Retour</string>
    <string name="order_sent">Commande Envoyé</string>
</resources>
