<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_new"
    tools:context=".Controller.RegisterActivity">

    <ImageView
        android:id="@+id/register_app_logo"
        android:layout_width="330dp"
        android:layout_height="130dp"
        android:src="@drawable/logo_youdise"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:layout_below="@+id/register_app_logo"
        android:padding="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/input_username"
        android:inputType="text"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorInput"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="visible"
        />

    <EditText
        android:id="@+id/register_fullname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:layout_below="@+id/register_app_logo"
        android:padding="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/input_fullname"
        android:inputType="text"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorInput"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="invisible"
        />

    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:layout_below="@+id/register_username_input"
        android:padding="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorInput"
        android:textSize="16sp"
        android:textStyle="italic"
        />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:layout_below="@+id/register_email_input"
        android:padding="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorInput"
        android:textSize="16sp"
        android:textStyle="italic"
        />

    <EditText
        android:id="@+id/register_phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:layout_below="@+id/register_password_input"
        android:padding="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/input_phone"
        android:inputType="number"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorInput"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="visible"
        />

    <EditText
        android:id="@+id/register_country_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:layout_below="@+id/register_phone_input"
        android:padding="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/input_country"
        android:inputType="text"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorInput"
        android:textSize="16sp"
        android:textStyle="italic"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_country_input"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/buttons"
        android:padding="16dp"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:textAllCaps="true"
        />

    <TextView
        android:id="@+id/admin_register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_btn"
        android:layout_alignParentEnd="true"
        android:text="@string/i_admin"
        android:textSize="14sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold|italic"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/not_admin_register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_btn"
        android:layout_alignParentStart="true"
        android:text="@string/not_admin"
        android:textSize="14sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold|italic"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:visibility="invisible"
        />

</RelativeLayout>