<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Controller.loginActivity">
    
    <ImageView
        android:id="@+id/login_app_logo"
        android:layout_width="330dp"
        android:layout_height="130dp"
        android:src="@drawable/logo_youdise"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        />

    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:layout_below="@+id/login_app_logo"
        android:padding="20dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="5dp"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorInput"
        android:textSize="16sp"
        android:textStyle="italic"
        />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:layout_below="@+id/login_email_input"
        android:padding="20dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="5dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="@color/colorInput"
        android:textColorHint="@color/colorInput"
        android:textSize="16sp"
        android:textStyle="italic"
        />
    
    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/login_password_input"
        android:layout_marginTop="8dp"
        >

        <CheckBox
            android:id="@+id/remember_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Material.Drawable.CheckBox"
            android:text="@string/remember_me_checkbox"
            android:textColor="@color/colorAccent"
            app:cbd_strokeColor="@color/colorAccent"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/forgot_pw_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/buttons"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:textAllCaps="true"
        />

    <TextView
        android:id="@+id/admin_login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_alignParentEnd="true"
        android:text="@string/i_admin"
        android:textSize="14sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold|italic"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/not_admin_login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_alignParentStart="true"
        android:text="@string/not_admin"
        android:textSize="14sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold|italic"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:visibility="invisible"
        />

</RelativeLayout>