<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.OrderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_order"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/close_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_setting"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/the_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/order_tilte"
        android:layout_below="@+id/toolbar_order"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/order_logo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/orders"
        android:layout_below="@+id/the_order"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/adress_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_logo"
        android:inputType="textMultiLine"
        android:layout_marginTop="30dp"
        android:padding="22dp"
        android:hint="@string/adress"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textStyle="italic"
        android:background="@drawable/input_design"
        />

    <EditText
        android:id="@+id/country_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adress_order"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:padding="22dp"
        android:hint="@string/input_country"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textStyle="italic"
        android:background="@drawable/input_design"
        />

    <EditText
        android:id="@+id/bank_card_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country_order"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:padding="22dp"
        android:hint="@string/card_bank"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textStyle="italic"
        android:background="@drawable/input_design"
        />

    <Button
        android:id="@+id/valid_order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginHorizontal="70dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bank_card_order"
        android:background="@drawable/buttons"
        android:padding="14dp"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/to_order"
        android:textColor="@color/colorWhite"
        />

</RelativeLayout>