<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.SettingActivity"
    android:orientation="vertical"
    android:background="@color/colorWhite">

   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar_setting"
       android:layout_width="match_parent"
       android:layout_height="60dp"
       android:background="@color/colorPrimaryDark"
       >
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           >
           <TextView
               android:id="@+id/close_setting"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/cancel_setting"
               android:textColor="@color/colorWhite"
               android:textSize="22sp"
               android:textStyle="bold"
               android:layout_alignParentBottom="true"
               android:layout_marginBottom="15dp"
               android:layout_alignParentStart="true"/>

           <TextView
               android:id="@+id/save_setting"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/save_setting"
               android:textColor="@color/colorWhite"
               android:textSize="22sp"
               android:textStyle="bold"
               android:layout_alignParentBottom="true"
               android:layout_marginBottom="15dp"
               android:layout_marginRight="10dp"
               android:layout_alignParentEnd="true"/>
       </RelativeLayout>
   </androidx.appcompat.widget.Toolbar>
    
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile_setting"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/male_profile"
        android:layout_below="@+id/toolbar_setting"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/change_image_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/title_setting"
        android:layout_below="@+id/image_profile_setting"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/name_profile_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_image_setting"
        android:inputType="text"
        android:layout_marginTop="80dp"
        android:padding="22dp"
        android:hint="@string/input_Newusername"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textStyle="italic"
        android:background="@drawable/input_design"
        />

    <EditText
        android:id="@+id/email_profile_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_profile_setting"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:padding="22dp"
        android:hint="@string/input_Newemail"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textStyle="italic"
        android:background="@drawable/input_design"
        />

    <EditText
        android:id="@+id/password_profile_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_profile_setting"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:padding="22dp"
        android:hint="@string/input_Newpassword"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textStyle="italic"
        android:background="@drawable/input_design"
        />

</RelativeLayout>