<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.ProductDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_product_detail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/close_product_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_setting"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/image_product_detail"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        android:layout_marginTop="13dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar_product_detail"
        />

    <TextView
        android:id="@+id/name_product_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_product_detail"
        android:text="@string/product_name"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="7dp"
        />

    <TextView
        android:id="@+id/description_product_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_product_detail"
        android:text="@string/product_describe"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/price_product_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_product_detail"
        android:text="@string/product_price"
        android:textSize="24sp"
        android:textColor="@color/colorBlack"
        android:textStyle="normal"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        />

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/quantity_product_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        app:textSize="18sp"
        app:initialNumber="1"
        app:finalNumber="10"
        app:backGroundColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/price_product_detail"
        android:layout_marginTop="17dp"
        />

    <Button
        android:id="@+id/add_cart_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginHorizontal="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/quantity_product_btn"
        android:background="@drawable/buttons"
        android:padding="15dp"
        android:textAllCaps="true"
        android:textSize="17sp"
        android:text="@string/addcart_bt_name"
        android:textColor="@color/colorWhite"
        />
</RelativeLayout>